# ai-knowledge-base

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  app.py  db_utils.py  file_processor.py  llm_utils.py  obsidian_utils.py  pyproject.toml
configs/: default.yaml  local.yaml.example
legacy/: Original.py  copyapp.py  copyllm.py  personal_ai.py  tavily code.txt
src/akb/: __init__.py  cli.py  cli_ops.py  config.py  schemas.py
src/akb/agents/: __init__.py  graph.py  memory.py  memory_store.py  mentor.py  pinning.py  slash.py  speculative.py  summarize.py  tools.py
src/akb/embed/: __init__.py  multimodal.py  providers.py
src/akb/eval/: __init__.py  golden.py  ragas_runner.py
src/akb/ingest/: __init__.py  chunkers.py  communities.py  contextualizer.py  dedupe.py  epub_loader.py  graph.py  image_loader.py  late_chunking.py  obsidian_loader.py  pdf_loader.py  pipeline.py  raptor.py  scrubber.py  sync.py  txt_loader.py  upsert.py  watcher.py  web_loader.py  youtube_loader.py
src/akb/obs/: __init__.py  logging.py  tracing.py
src/akb/ops/: __init__.py  backup.py  schedules.py
src/akb/prompts/: __init__.py  chat.py  mentor.py
src/akb/retrieve/: __init__.py  colbert_rerank.py  graph_expand.py  hybrid.py  pipeline.py  query_transform.py  rerank.py  time_filter.py
src/akb/sessions/: __init__.py  db.py
src/akb/store/: __init__.py  migrations.py  qdrant_store.py  sqlite_state.py
src/akb/ui/: __init__.py  app.py
tests/: conftest.py
tests/golden/: golden_set.yaml
tests/integration/: test_ingest_pipeline.py  test_retrieve_pipeline.py
tests/unit/: test_backup.py  test_chunk_id_determinism.py  test_chunkers.py  test_communities.py  test_contextualizer_batch.py  test_contextualizer_cache.py  test_critic_loop.py  test_dedupe.py  test_graph.py  test_graph_expand_scoring.py  test_hybrid_rrf.py  test_image_loader.py  test_index_stamp.py  test_ingest_state.py  test_mentor_history.py  test_mentor_plan.py  test_obsidian_loader.py  test_pinning.py  test_raptor.py  test_recency_rerank.py  test_schedules.py  test_scrubber.py  test_slash.py  test_speculative.py  test_sync_empty_chunks.py  test_time_filter.py  test_unicode_link_resolution.py  test_youtube_loader.py
