[project]
name = "akb"
version = "2.0.0"
description = "Personal AI knowledge base over Obsidian + PDFs with hybrid Qdrant retrieval, LangGraph agents, and incremental sync."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Jefritz" }]
license = { text = "MIT" }

dependencies = [
  # core orchestration
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "anyio>=4.4",
  "httpx>=0.27",
  "tenacity>=9.0",
  # llm clients
  "ollama>=0.3",
  "google-generativeai>=0.7",
  # vector store + sparse + rerank
  "qdrant-client>=1.11",
  "bm25s>=0.2.0",
  "sentence-transformers>=3.0",
  "FlagEmbedding>=1.2",
  # ingest
  "pymupdf>=1.24",
  "pymupdf4llm>=0.0.17",
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12",
  "python-frontmatter>=1.1",
  "langchain-text-splitters>=0.3",
  # graph
  "networkx>=3.3",
  # sync + fs
  "watchfiles>=0.24",
  # web search tools
  "duckduckgo-search>=6.2",
  # web/youtube ingest
  "trafilatura>=1.10",
  "yt-dlp>=2024.10",
  "youtube-transcript-api>=0.6",
  # time-aware retrieval
  "dateparser>=1.2",
  # ui (kept thin)
  "streamlit>=1.38",
  "streamlit-agraph>=0.0.45",
  # agent framework
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-ollama>=0.2",
  # observability
  "structlog>=24.4",
  # eval
  "ragas>=0.2",
  "datasets>=2.20",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-recording>=0.13",
  "syrupy>=4.7",
  "hypothesis>=6.112",
]
late = [
  # Phase 9 optional: late chunking + ColBERT
  "ragatouille>=0.0.8",
]
tracing = [
  # Phase 8 optional: Langfuse + OpenTelemetry
  "langfuse>=2.50",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
]

[project.scripts]
akb = "akb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]  # allow many-arg constructors for config objects

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_decorators = false
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
